# test_dbt_ducklake

./: .env  .gitignore  Dockerfile  Dockerfile.etl  README.md  compose.yml  ducklake.py  main.py  pyproject.toml  requirements.txt
.cubestore/data/cachestore/: IDENTITY  LOG
.cubestore/data/metastore/: 000008.sst  IDENTITY  LOG  LOG.old.1778688111324640  MANIFEST-000010
.devcontainer/: Dockerfile
.github/workflows/: ci.yaml
dbt_proj/: dbt_project.yml  profiles.yml
dbt_proj/models/: properties.yml
ingestion/: import.py  info.py  ingest.ipynb  main.py  worksheet.py
scripts/: run_dbt.sh
src/dbt_inference/: dbt_project.yml  profiles.yml
src/dbt_inference/models/: properties.yml
src/dbt_inference/models/transform/: business_surveys.sql
src/dbt_proj/: dbt_project.yml  profiles.yml
src/dbt_proj/data/lake/main/raw_doing_business/: ducklake-019dc6c6-2231-7322-bc4e-d849b3b0c5a6.parquet  ducklake-019dc9df-e73f-7d2b-ab91-200b438b9e26.parquet  ducklake-019dca18-443c-716d-a311-cf15c526b4d6.parquet
src/dbt_proj/data/lake/main/raw_enterprise_surveys/: ducklake-019dc9e0-42ae-7a36-8571-3bc4b0d0e46d.parquet
src/dbt_proj/data/lake/main/raw_governance_indicators/: ducklake-019dc9e0-5da8-75ab-ac48-942e851f2999.parquet  ducklake-019dca18-bab4-797d-bae6-7264d934a07e.parquet
src/dbt_proj/models/transform/: market_insights.sql
src/etl/: setup_ducklake.py
src/etl/ingestion/: api_ingest.py  ingest.ipynb  main.py  worksheet.py
src/scripts/: run.sh  run_dbt.sh
src/test_dbt_ducklake.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+1 files in other folders)
