[project]
name = "test-dbt-ducklake"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt>=1.0.0.40.16",
    "dbt-duckdb==1.10.1",
    "dotenv>=0.9.9",
    "duckdb>=1.5.2",
    "loguru>=0.7.3",
    "pandas>=3.0.2",
    "polars>=1.40.1",
]

[tool.uv]
package = true
