[project]
name = "embedded_lakehouse"
version = "0.1.1"
description = "Ducklake DBT Agentic Lakehouse V1 POC"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt-core>=1.11.8",
    "dbt-duckdb==1.10.1",
    "dotenv>=0.9.9",
    "duckdb>=1.5.2",
    "duckdb-cli>=1.5.2",
    "loguru>=0.7.3",
    "pandas>=3.0.2",
    "polars>=1.40.1",
]

[tool.uv]
package = true
